--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
-  
+
 h1 {
     text-align: center;
 }
@@ -23,6 +23,7 @@ table {
     height: 50px;
     border-radius: 7px;
 }
+
 .seat {
     background-color: #761818;
     cursor: pointer;
@@ -31,9 +32,11 @@ table {
 .selected {
     background-color: orange;
 }
+
 .booked {
     background-color: red;
 }
+
 .seat.booked:hover {
     background-color: gray;
     cursor: not-allowed;
@@ -43,7 +46,7 @@ table {
     position: absolute;
     right: 20px;
     top: 20px;
-
+    border-radius: 15px;
     background-color: orange;
     padding: 20px;
 }
@@ -55,5 +58,24 @@ table {
 
     background-color: transparent;
     border: 1px solid white;
-    color: white;
+    color: rgb(254, 254, 247);
+    background-color: rgba(193, 125, 7, 0.559);
+    cursor: pointer;
+
+}
+
+.btn-book-seat:hover {
+    color: orange;
+    cursor: pointer;
+}
+
+.highlight {
+    background-color: rgba(255, 255, 61, 0.525);
+    border: 1px solid blue;
+
+}
+
+.btn-highlight:hover {
+    background-color: rgba(255, 255, 61, 0.525);
+    cursor: pointer;
 }
